--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: one_trip_production
-  username: one_trip
+  database: onetrip_db
+  username: onetrip_user
   password: <%= ENV['ONE_TRIP_DATABASE_PASSWORD'] %>
