--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: onetrip
-    databaseName: onetrip
+  - name: OneTrip_DB
+    databaseName: onetrip_db
     user: onetrip_user
     region: singapore
 
 services:
   - type: web
-    name: onetrip
+    name: OneTrip
     env: ruby
     region: singapore
     plan: free
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: onetrip
+          name: OneTrip_DB
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
