--- a/config/database.yml
+++ b/config/database.yml
@@ -82,11 +82,8 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  adapter: postgresql
-  encoding: unicode
-  username: one_trip_user
-  password: <%= ENV['PASSWORD'] %>
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: one_trip_production
+  <<: *default
+  database: <%= ENV['ONE_TRIP_DATABASE_dbname'] %>
+  username: <%= ENV['ONE_TRIP_DATABASE_username'] %>
+  password: <%= ENV['ONE_TRIP_DATABASE_PASSWORD'] %>
+  host: <%= ENV['ONE_TRIP_DATABASE_host'] %>
