--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: OneTrip_DB
-    databaseName: onetrip_db
-    user: onetrip_user
+  - name: one_trip_production
+    databaseName: one_trip_production
+    user: one_trip_user
     region: singapore
 
 services:
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: OneTrip_DB
+          name: one_trip_production
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
