--- a/render.yaml
+++ b/render.yaml
@@ -13,10 +13,10 @@ services:
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
-      - key: DATABASE_URL
+      - key: <%= ENV['DATABASE_URL'] %>
         fromDatabase:
           name: one_trip_production
           property: connectionString
-      - key: RAILS_MASTER_KEY
+      - key: <%= ENV['RAILS_MASTER_KEY'] %>
         sync: false
 
