--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: db
   username: <%= ENV['USERNAMEPG'] %>
   password: <%= ENV['PASSWORD'] %>
   # For details on connection pooling, see Rails configuration guide
